--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,36 @@
-theme: jekyll-theme-hacker
+title: Hello, world! I'm David Freeman
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+permalink: ':title/'
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+site-twitter: #if your site has a twitter account, enter it here
+
+# Author Settings
+author: Arnau Lacambra # add your name
+author-img: arnau-lacambra.jpg # add your photo
+about-author: I am a solutions developer focusing on front-end development. Always hungry to keep learning. # add description
+social-twitter: naulacambra # add your Twitter handle
+social-github: naulacambra # add your Github handle
+social-linkedin: arnau-lacambra-torres # add your Linkedin handle
+social-email: naulacambra@gmail.com # add your Email address
+
+# Disqus
+discus-identifier: # mr-brown # add your discus identifier
+
+# Tracker
+analytics: # Google Analytics
+
+# Build Settings
+markdown: kramdown
+plugins:
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jemoji
+
+paginate: 8
+paginate_path: "/page/:num"
+
+exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
